[package]
name = "media-files-store"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14.0"
thiserror = "1"
anyhow = "1"

image = "0.25"
fast_image_resize = { version = "=4.1.0", features = ["image"]}

async-trait = "0.1"
futures = "0.3"
bytes = "1.6"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-channel = "2"
reqwest = "0.12"


metrics = "0.23.0"
metrics-prometheus = "0.4"
metrics-exporter-prometheus = "0.15.3"
metrics-process = "2"
memory-stats = "1"
sysinfo = "0.31"

aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-types = "1.3.3"
aws-sdk-s3 = "1.41.0"

axum = "0.7"
tonic = "0.12"
prost = "0.13"

sha3 = "0.10.8"
bs58 = "0.5.1"

[build-dependencies]
tonic-build = "0.12"
